envoy-k8s/envoy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    linkerd.io/inject: enabled
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: envoy-server-nodeport-service
                port:
                  number: 9090
